cluster/apps/dcts/livekit/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: livekit
    app.kubernetes.io/version: v1.10.0
  name: livekit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: livekit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: livekit
        app.kubernetes.io/version: v1.10.0
    spec:
      automountServiceAccountToken: false
      containers:
      - command:
        - /livekit-server
        - --config
        - /etc/livekit.yaml
        - --port
        - "7880"
        image: livekit/livekit-server:v1.10.0
        name: livekit
        ports:
        - containerPort: 7880
          name: http
        volumeMounts:
        - mountPath: /etc/livekit.yaml
          subPath: livekit.yaml
          name: livekit-config-volume
        - mountPath: /certs
          name: livekit-certs-volume
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: livekit-config-volume
        secret:
          secretName: livekit-secret
          defaultMode: 420
      - name: livekit-certs-volume
        secret:
          secretName: livekit-tls
