cluster/apps/dcts/livekit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: livekit
    app.kubernetes.io/version: v1.10.0
  name: livekit
spec:
  selector:
    app.kubernetes.io/name: livekit
  ports:
  - name: tcp-livekit
    port: 7880
    targetPort: 7880
    protocol: TCP
  - name: tcp-rtc-livekit
    port: 7881
    targetPort: 7881
    protocol: TCP
  - name: udp-turn-livekit
    port: 3478
    targetPort: 3478
    protocol: UDP
  - name: tcp-turns-livekit
    port: 5349
    targetPort: 5349
    protocol: TCP
  - name: udp-turns-livekit
    port: 5349
    targetPort: 5349
    protocol: UDP
  - name: rtc-udp-50000
    port: 50000
    targetPort: 50000
    protocol: UDP
  - name: rtc-udp-50001
    port: 50001
    targetPort: 50001
    protocol: UDP
  - name: rtc-udp-50002
    port: 50002
    targetPort: 50002
    protocol: UDP
  - name: rtc-udp-50003
    port: 50003
    targetPort: 50003
    protocol: UDP
  - name: rtc-udp-50004
    port: 50004
    targetPort: 50004
    protocol: UDP
