cluster/apps/dcts/livekit/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: livekit-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: livekit
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: netbird
      podSelector:
        matchLabels:
          app.kubernetes.io/name: networkrouter
    ports:
    - port: 7880
      protocol: TCP
    - port: 7881
      protocol: TCP
  - from: []
    ports:
    - port: 50000
      endPort: 50005
  - from: []
    ports:
    - port: 3478
      protocol: UDP
    - port: 5349
      protocol: TCP
    - port: 5349
      protocol: UDP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to: []
    ports:
    - port: 50000
      endPort: 50005
  - to: []
    ports:
    - port: 3478
      protocol: UDP
    - port: 5349
      protocol: TCP
    - port: 5349
      protocol: UDP
